<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewh1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_h1"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15.5sp"
                android:text="@string/faq_b1" />

            <TextView
                android:id="@+id/textViewh2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="19sp"
                android:text="@string/faq_h2" />

            <TextView
                android:id="@+id/textViewb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15.5sp"
                android:text="@string/faq_b2" />

            <TextView
                android:id="@+id/textViewh3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="19sp"
                android:text="@string/faq_h3" />

            <TextView
                android:id="@+id/textViewb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15.5sp"
                android:text="@string/faq_b3" />

            <TextView
                android:id="@+id/textViewh4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_h4"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_b4"
                android:textSize="15.5sp"/>

            <TextView
                android:id="@+id/textViewh5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_h5"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_b5"
                android:textSize="15.5sp"/>

            <TextView
                android:id="@+id/textViewLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_link" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>