<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_api">

    <fragment
        android:id="@+id/navigation_api"
        android:name="com.example.covidtoolkit.ui.home.HomeFragment"
        android:label="@string/title_api"
        tools:layout="@layout/fragment_api" />

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.covidtoolkit.ui.dashboard.DashboardFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.covidtoolkit.ui.notifications.NotificationsFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />
</navigation>